logs/sblog.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Pygments-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mistune-0.8.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pygments'...
Listing './lib/python3.5/site-packages/pygments/filters'...
Listing './lib/python3.5/site-packages/pygments/formatters'...
Listing './lib/python3.5/site-packages/pygments/lexers'...
Listing './lib/python3.5/site-packages/pygments/styles'...
Listing './lib/python3.5/site-packages/sblog'...
Listing './lib/python3.5/site-packages/sblog/_themes'...
Listing './lib/python3.5/site-packages/sblog/_themes/default'...
Listing './lib/python3.5/site-packages/sblog/_themes/default/assets'...
Listing './lib/python3.5/site-packages/sblog/_themes/default/static'...
Compiling './lib/python3.5/site-packages/sblog/app.py'...
***   File "./lib/python3.5/site-packages/sblog/app.py", line 94
    os.mkdir(src_folder, 0755)
                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/sblog/bin'...
Compiling './lib/python3.5/site-packages/sblog/main.py'...
***   File "./lib/python3.5/site-packages/sblog/main.py", line 17
    print 'Sblog version %s' % version
                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sblog/readers'...
Compiling './lib/python3.5/site-packages/sblog/readers/markdown.py'...
***   File "./lib/python3.5/site-packages/sblog/readers/markdown.py", line 36
    title_pattern = re.compile(ur'<h1>(.+?)</h1>')
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/sblog/writers'...
Compiling './lib/python3.5/site-packages/sblog/writers/post.py'...
***   File "./lib/python3.5/site-packages/sblog/writers/post.py", line 22
    os.makedirs(file_dir, mode=0755)
                                  ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/sblog-2.0.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
